これまでの挑戦一覧を追加

--- a/works/index.html
+++ b/works/index.html
@@ -18,173 +18,173 @@
 </head>
 
 <body>
-    <div class="wrap">
-        <header>
-            <!-- 画面上部のナビバー-->
-            <nav class="navbar navbar-dark navbar-expand-sm portfoliomenu fixed-top" id="normalmenu">
-                <a href="/" class="navbar-brand">吉田信将の<br>ポートフォリオ</a>
+    <!--div class="wrap"-->
+    <header>
+        <!-- 画面上部のナビバー-->
+        <nav class="navbar navbar-dark navbar-expand-sm portfoliomenu fixed-top" id="normalmenu">
+            <a href="/" class="navbar-brand">吉田信将の<br>ポートフォリオ</a>
 
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navmenu1" aria-controls="navmenu1" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navmenu1" aria-controls="navmenu1" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-                <div class="collapse navbar-collapse" id="navmenu1">
-                    <div class="navbar-nav">
-                        <a href="/introduce" class="navbar-brand">Information</a>
-                        <a href="/works" class="navbar-brand">Works</a>
-                    </div>
-                </div>
-            </nav>
-
-        </header>
-        <div class="spaceForMenu" id="spaceForMenuid"></div>
-        <!--ここまで、他ページのヘッダー-->
-
-        <div class="container  mainText worksText">
-            <h1>Works</h1>
-            <br>
-            <h1>特に自信のある制作物 2選</h1>
-            <img src="/img/underbar.png" class="underbar">
-
-            <div class="row">
-                <div class="col-md-12">
-                    <h3>「つなぐカフェ＠飯塚」のWebサイト</h3>
+            <div class="collapse navbar-collapse" id="navmenu1">
+                <div class="navbar-nav">
+                    <a href="/introduce" class="navbar-brand">Information</a>
+                    <a href="/works" class="navbar-brand">Works</a>
                 </div>
             </div>
+        </nav>
 
-            <div class="row">
-                <div class="col-md-4">
-                    <img src="TsunaguHugo.jpg" class="img-fluid">
-                </div>
-                <div class="col-md-8">
-                    <p><strong>概要</strong><br> アルバイトの一環で、飯塚の大学生に、もっと「つなぐカフェ＠飯塚」に来てもらうために制作しました。
-                    </p>
-                    <p>
-                        「つなぐカフェ＠飯塚」は、飯塚の学生、企業、市民間の交流を支援するために作られたコワーキングスペースです。しかし、学生の利用者が少ないという問題がありました。そこで、飯塚にいる大学生の中でも活動的な学生に焦点を当て、彼らがここで作業をするメリットを考え、そのメリットを伝えられるように制作しました。
-                    </p>
+    </header>
+    <div class="spaceForMenu" id="spaceForMenuid"></div>
+    <!--ここまで、他ページのヘッダー-->
 
-                    <p><strong>アピールポイント : 吉田が幅広い分野に関わっています。</strong><br> 吉田がフロントエンドの実装から、バックエンドのサーバーの構築まで、幅広い分野に関わっています。
-                    </p>
-                    <p>
-                        例えば、チームでの開発の際に、吉田は多くの部分をこなし、チームの中心として活躍することができます。また、新しい分野を学ぶとき、これまでの知識を足がかりにして効率よく学ぶことができます。</p>
-                    <p><a href="/website/tsunaguhugo2">「つなぐカフェ＠飯塚」のWebサイトについて、詳しくはこちら > </a></p>
-                </div>
+    <div class="container  mainText worksText">
+        <h1>Works</h1>
+        <br>
+        <h1>特に自信のある制作物 2選</h1>
+        <img src="/img/underbar.png" class="underbar">
+
+        <div class="row">
+            <div class="col-md-12">
+                <h3>「つなぐカフェ＠飯塚」のWebサイト</h3>
             </div>
-
-            <br>
-
-            <div class="row">
-                <div class="col-md-12">
-                    <h3>イベント「レトロゲームを作ってみようの会」</h3>
-                </div>
-            </div>
-
-            <div class="row">
-                <div class="col-md-4">
-                    <img src="slide.jpg" class="img-fluid">
-                </div>
-                <div class="col-md-8">
-                    <p><strong>概要</strong><br> アルバイトの一環で吉田が主催した、新入生に大学での学びについて考えてもらうイベントです。
-                    </p>
-                    <p>
-                        Pythonのモジュール"Pyxel"でのレトロゲーム制作を通して、大学での学びで必要な、新しいことを学んで「変化する」という考え方を伝えました。
-                    </p>
-
-                    <p><strong>アピールポイント : 複数の分野の知見を組み合わせ、目標の達成を狙いました。</strong><br> ゲームを作るための技術に関する知見と、「暗黙知」や「U理論」のような認知科学の知見を生かしました。
-                    </p>
-                    <p>
-                        このイベントのように、吉田は自分の専門分野にこだわらないで、目標の達成に取り組むことができます。
-                    </p>
-                    <p><a href="/event/pyxel">イベント「レトロゲームを作ってみようの会」について、詳しくはこちら ></a></p>
-                </div>
-            </div>
-
-
-
-            <h1>ジャンル別の制作物紹介</h1>
-            <img src="/img/underbar.png" class="underbar">
-
-            <div class="row">
-                <div class="col-md-12">
-                    <h4>Webサイト</h4>
-                    <p>「まず問題を整理してから」解決方法を考えることはあらゆる分野で共通な考え方だと思います。が、特にUIの分野は、問題をうまく整理するほど成果物の出来が極端によくなるように感じています。</p>
-                    <p>ですので、UIやWebデザインの分野に興味を持ち、アルバイト先でWebサイトの制作などを行いました。</p>
-                    <p><a href="/website">Webサイトについて、詳しくはこちら ></a></p>
-                </div>
-            </div>
-            <img src="/works/portfolio.png" style="width:20%;">
-            <img src="/works/TsunaguHugo.jpg" style="width:20%;">
-
-            <div class="row">
-                <div class="col-md-12">
-                    <h4>フライヤー</h4>
-                    <p>デザインの勉強をするため、アルバイト先でのフライヤー制作の仕事を、自分から積極的に行いました。<br> 本もたくさん読みました。特に「ノンデザイナーズ・デザインブック(第４版)(Robin Williams 著, 吉川典秀 訳,マイナビ出版)」はよく参考にします。</p>
-                    <p><a href="/flier">フライヤーについて、詳しくはこちら ></a></p>
-                </div>
-            </div>
-            <img src="/works/kyoupuro.jpg" style="width:20%;">
-            <img src="/works/TsunaguStaff.jpg" style="width:20%;">
-            <img src="/works/retoro.jpg" style="width:20%;">
-
-
-
-            <div class="row">
-                <div class="col-md-12">
-                    <h4>ワークショップ</h4>
-                    <p>
-                        より良いワークショップの企画のためにはWebデザインなどを考える時と同じく、まず問題を明確にすることに尽きると思います。<br> 「このワークショップでは、何を伝えたいのか？」を徹底的に考え、スライドを作りながら人にもスライドをみせ、だんだんと問題を整理することで、ワークショップの企画を進めるよう心がけています。
-                    </p>
-                    <p>
-                        ワークショップのための本もいくつも読みました。特に「ワークショップデザイン論―創ることで学ぶ(山内祐平 著, 森玲奈 著, 安斎勇樹 著, 慶應義塾大学出版会」は、内容が高度で難しいですが、自分の今の企画で進めて良いか困った時に、指針になります。
-                    </p>
-                    <p><a href="/event">ワークショップについて、詳しくはこちら ></a></p>
-                </div>
-            </div>
-            <img src="/works/slide.jpg" style="width:20%;">
-            <img src="/works/sinnyusei.jpeg" style="width:20%;">
-
-            <div class="row">
-                <div class="col-md-12">
-                    <h4>技術に関するもの(Webアプリ、ディープラーニング、…)</h4>
-                    <p>コンピュータにまつわる技術には興味を持ち、色々と触れてきました。幅広い知識を持っているので、あらゆる分野の仕事に関わることができます。また、今知らない分野でも、必要になれば、積極的に学んで身に付けるようにしています。</p>
-                    <p>例えばWeb系の技術でしたら、UIに直接関わるフロントエンドだけでなく、バックエンドのrailsや、サーバーの構築なども行ってきました。</p>
-                    <p><a href="/program">技術に関するものについて、詳しくはこちら ></a></p>
-                </div>
-            </div>
-            <img src="/works/tapioka.jpg" style="width:20%;">
-
-
         </div>
-        <!--コこから、他ページのフッター-->
-        </main>
 
-        <footer>
-            <div class="container-fluid">
-                <div class="container">
-
-                    <div class="row">
-                        <div class="col-md-6">
-                            <h3>吉田信将</h3>
-                            <p>九州工業大学 情報工学部 知能情報工学科　2021年卒業予定</p>
-                        </div>
-                        <div class="col-md-6">
-                            <h3>連絡先</h3>
-                            <p>Mail : yoshida.toshinobu388@mail.kyutech.jp</p>
-                        </div>
-                    </div>
-
-                    <div class="row">
-                        <div class="col-md-12">
-                            <h3><a href="/">TOP</a></h3><br>
-                            <h3><a href="/introduce">Information</a></h3><br>
-                            <h3><a href="/works">Works</a></h3><br>
-                        </div>
-                    </div>
-
-
-                </div>
+        <div class="row">
+            <div class="col-md-4">
+                <img src="TsunaguHugo.jpg" class="img-fluid">
             </div>
-        </footer>
+            <div class="col-md-8">
+                <p><strong>概要</strong><br> アルバイトの一環で、飯塚の大学生に、もっと「つなぐカフェ＠飯塚」に来てもらうために制作しました。
+                </p>
+                <p>
+                    「つなぐカフェ＠飯塚」は、飯塚の学生、企業、市民間の交流を支援するために作られたコワーキングスペースです。しかし、学生の利用者が少ないという問題がありました。そこで、飯塚にいる大学生の中でも活動的な学生に焦点を当て、彼らがここで作業をするメリットを考え、そのメリットを伝えられるように制作しました。
+                </p>
+
+                <p><strong>アピールポイント : 吉田が幅広い分野に関わっています。</strong><br> 吉田がフロントエンドの実装から、バックエンドのサーバーの構築まで、幅広い分野に関わっています。
+                </p>
+                <p>
+                    例えば、チームでの開発の際に、吉田は多くの部分をこなし、チームの中心として活躍することができます。また、新しい分野を学ぶとき、これまでの知識を足がかりにして効率よく学ぶことができます。</p>
+                <p><a href="/website/tsunaguhugo2">「つなぐカフェ＠飯塚」のWebサイトについて、詳しくはこちら > </a></p>
+            </div>
+        </div>
+
+        <br>
+
+        <div class="row">
+            <div class="col-md-12">
+                <h3>イベント「レトロゲームを作ってみようの会」</h3>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-md-4">
+                <img src="slide.jpg" class="img-fluid">
+            </div>
+            <div class="col-md-8">
+                <p><strong>概要</strong><br> アルバイトの一環で吉田が主催した、新入生に大学での学びについて考えてもらうイベントです。
+                </p>
+                <p>
+                    Pythonのモジュール"Pyxel"でのレトロゲーム制作を通して、大学での学びで必要な、新しいことを学んで「変化する」という考え方を伝えました。
+                </p>
+
+                <p><strong>アピールポイント : 複数の分野の知見を組み合わせ、目標の達成を狙いました。</strong><br> ゲームを作るための技術に関する知見と、「暗黙知」や「U理論」のような認知科学の知見を生かしました。
+                </p>
+                <p>
+                    このイベントのように、吉田は自分の専門分野にこだわらないで、目標の達成に取り組むことができます。
+                </p>
+                <p><a href="/event/pyxel">イベント「レトロゲームを作ってみようの会」について、詳しくはこちら ></a></p>
+            </div>
+        </div>
+
+
+
+        <h1>ジャンル別の制作物紹介</h1>
+        <img src="/img/underbar.png" class="underbar">
+
+        <div class="row">
+            <div class="col-md-12">
+                <h4>Webサイト</h4>
+                <p>「まず問題を整理してから」解決方法を考えることはあらゆる分野で共通な考え方だと思います。が、特にUIの分野は、問題をうまく整理するほど成果物の出来が極端によくなるように感じています。</p>
+                <p>ですので、UIやWebデザインの分野に興味を持ち、アルバイト先でWebサイトの制作などを行いました。</p>
+                <p><a href="/website">Webサイトについて、詳しくはこちら ></a></p>
+            </div>
+        </div>
+        <img src="/works/portfolio.png" style="width:20%;">
+        <img src="/works/TsunaguHugo.jpg" style="width:20%;">
+
+        <div class="row">
+            <div class="col-md-12">
+                <h4>フライヤー</h4>
+                <p>デザインの勉強をするため、アルバイト先でのフライヤー制作の仕事を、自分から積極的に行いました。<br> 本もたくさん読みました。特に「ノンデザイナーズ・デザインブック(第４版)(Robin Williams 著, 吉川典秀 訳,マイナビ出版)」はよく参考にします。</p>
+                <p><a href="/flier">フライヤーについて、詳しくはこちら ></a></p>
+            </div>
+        </div>
+        <img src="/works/kyoupuro.jpg" style="width:20%;">
+        <img src="/works/TsunaguStaff.jpg" style="width:20%;">
+        <img src="/works/retoro.jpg" style="width:20%;">
+
+
+
+        <div class="row">
+            <div class="col-md-12">
+                <h4>ワークショップ</h4>
+                <p>
+                    より良いワークショップの企画のためにはWebデザインなどを考える時と同じく、まず問題を明確にすることに尽きると思います。<br> 「このワークショップでは、何を伝えたいのか？」を徹底的に考え、スライドを作りながら人にもスライドをみせ、だんだんと問題を整理することで、ワークショップの企画を進めるよう心がけています。
+                </p>
+                <p>
+                    ワークショップのための本もいくつも読みました。特に「ワークショップデザイン論―創ることで学ぶ(山内祐平 著, 森玲奈 著, 安斎勇樹 著, 慶應義塾大学出版会」は、内容が高度で難しいですが、自分の今の企画で進めて良いか困った時に、指針になります。
+                </p>
+                <p><a href="/event">ワークショップについて、詳しくはこちら ></a></p>
+            </div>
+        </div>
+        <img src="/works/slide.jpg" style="width:20%;">
+        <img src="/works/sinnyusei.jpeg" style="width:20%;">
+
+        <div class="row">
+            <div class="col-md-12">
+                <h4>技術に関するもの(Webアプリ、ディープラーニング、…)</h4>
+                <p>コンピュータにまつわる技術には興味を持ち、色々と触れてきました。幅広い知識を持っているので、あらゆる分野の仕事に関わることができます。また、今知らない分野でも、必要になれば、積極的に学んで身に付けるようにしています。</p>
+                <p>例えばWeb系の技術でしたら、UIに直接関わるフロントエンドだけでなく、バックエンドのrailsや、サーバーの構築なども行ってきました。</p>
+                <p><a href="/program">技術に関するものについて、詳しくはこちら ></a></p>
+            </div>
+        </div>
+        <img src="/works/tapioka.jpg" style="width:20%;">
+
+
     </div>
+    <!--コこから、他ページのフッター-->
+    </main>
+
+    <footer>
+        <div class="container-fluid">
+            <div class="container">
+
+                <div class="row">
+                    <div class="col-md-6">
+                        <h3>吉田信将</h3>
+                        <p>九州工業大学 情報工学部 知能情報工学科　2021年卒業予定</p>
+                    </div>
+                    <div class="col-md-6">
+                        <h3>連絡先</h3>
+                        <p>Mail : yoshida.toshinobu388@mail.kyutech.jp</p>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-md-12">
+                        <h3><a href="/">TOP</a></h3><br>
+                        <h3><a href="/introduce">Information</a></h3><br>
+                        <h3><a href="/works">Works</a></h3><br>
+                    </div>
+                </div>
+
+
+            </div>
+        </div>
+    </footer>
+    <!--/div-->
     <!--wrapのdivに対応する/div。NoeLoadingの時に透明になってるクラス-->
 
     <!--Boostrap読み込み-->
