成果を追加

--- a/event/rantyao/index.html
+++ b/event/rantyao/index.html
@@ -152,7 +152,7 @@
 <li><p>藍橋杯本番：18名</p>
 
 <ul>
-<li>(日本からの参加者のうち、約半数が九工大からの出場だったそうです。なので、成績上位者の九工大の占める割合が妙に高いです。<a href="http://contest.lanqiao.org/jp/news_12.do">http://contest.lanqiao.org/jp/news_12.do</a>)<br /></li>
+<li>(日本からの参加者のうち、約半数が九工大からの出場だったそうです。ですので、成績上位者の九工大の占める割合が非常にに高いです。<a href="http://contest.lanqiao.org/jp/news_12.do">http://contest.lanqiao.org/jp/news_12.do</a>)<br /></li>
 </ul></li>
 
 <li><p>藍橋杯本番終了後のアンケートでも「問題の解き方を人に説明する練習をしていたおかげで、本番でも自分の考えを整理できたと感じています」「他の人の考えを聞けたのが勉強になりました」といった意見をいただきました。</p></li>
