--- a/event/sinnyuusei/index.html
+++ b/event/sinnyuusei/index.html
@@ -102,7 +102,7 @@
 
 <h3 id="イベントの目標">イベントの目標</h3>
 
-<p>このイベントの一番大きな目的は、参加した新入生のみなさんが「意外とプログラミングってできそう」みたいな気分になり、自分から進んでプログラミングの勉強をしたくなることです。</p>
+<p>このイベントの一番大きな目的は、参加した新入生のみなさんが「意外とプログラミングってできそう」という気分になり、自分から進んでプログラミングの勉強をしたくなることです。</p>
 
 <p>それを踏まえて、勉強会は「まず手を動かして、プログラミングの初歩を知る」をテーマにしました。
 「人間は自分の経験と結びついた知識しか身につかない」ということはよく知られています。これを参考に、チュートリアルは最低限にし、できるだけ自分で実装する中で学びが起こるようなイベントになるよう心がけました。</p>
