--- a/index.html
+++ b/index.html
@@ -215,6 +215,47 @@
             </div>
         </div>
 
+
+
+        <div class="row">
+            <div class="col-md-12">
+                <h1>誇れる成果</h1>
+                <img src="./img/underbar.png" class="underbar">
+                <h3>西日本新聞様に藍橋杯の様子を記事にしていただきました</h3>
+            </div>
+            <div class="col-md-4">
+                <img src="./img/seika1.jpg" class="img-fluid">
+                <p>藍橋杯に向けた勉強会の様子</p>
+            </div>
+            <div class="col-md-8">
+                <p>西日本新聞の記事はこちらから見られます：<a href="https://www.nishinippon.co.jp/sp/item/n/514192/">https://www.nishinippon.co.jp/sp/item/n/514192/</a></p>
+                <p>藍橋杯(<a href="http://contest.lanqiao.org/jp/">http://contest.lanqiao.org/jp/</a>)は、中国で開催されている大規模な競技プログラミングの大会です。
+                    <br>2019年は、初めて日本でも開催されることになり、その九州会場に、九州工業大学飯塚キャンパスが選ばれました。
+                </p>
+                <p>吉田は藍橋杯にスタッフとして関わりました。
+                    <br>藍橋杯への参加を促す告知(フライヤーを制作して大学内に貼るなど)、藍橋杯本番に向けた勉強会の企画運営などを行いました。</p>
+                <p>大会本番の参加者は18名です。また、全4回の勉強会にも、コンスタントに10名程度の参加がありました。</p>
+                <p>また、大会本番の様子は、西日本新聞様に取材いただきました。</p>
+                <p>藍橋杯本番終了後、吉田の勉強会についてアンケートで尋ねたところ、「問題の解き方を人に説明する練習をしていたおかげで、本番でも自分の考えを整理できたと感じています」「他の人の考えを聞けたのが勉強になりました」といった意見をいただきました。</p>
+                <p><a href="./event/rantyao">藍橋杯の勉強会について、より詳しくはこちら ></a></p>
+            </div>
+
+            <div class="col-md-12">
+                <h3>九州工業大学情報工学部の新入生のうち7%の参加があったイベント
+                    <br>「新入生のためのプログラミング入門イベント」</h3>
+            </div>
+            <div class="col-md-4">
+                <img src="./img/seika2.jpg" class="img-fluid">
+                <p>イベントの様子</p>
+            </div>
+            <div class="col-md-8">
+                <p>「新入生のためのプログラミング入門イベント」は、吉田がアルバイトの業務の一環で開催したイベントです。
+                    <br>参加した新入生のみなさんが「意外とプログラミングってできそう」という気分になり、自分から進んでプログラミングの勉強をしたくなるイベントを目指しました。</p>
+                <p>吉田は、フライヤーを学内に貼って告知、イベントのスライド作成、当日の司会進行を行いました。</p>
+                <p>参加者は、30名ほどいました(参加人数を知るためのアンケートに答えずに帰られた方が多数いるので、正確な数字はわかりません)。
+                    <br>九州工業大学情報工学部の新入生は410名ほどいるので、7%の新入生が参加したことになります。</p>
+            </div>
+        </div>
     </div>
 
     
