--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
             </div>
 
             <div class="col-md-12">
-                <h3>九州工業大学情報工学部の新入生のうち7%の参加があったイベント
+                <h3>九工大飯塚キャンパスで開催し、30名のの参加があったイベント
                     <br>「新入生のためのプログラミング入門イベント」</h3>
             </div>
             <div class="col-md-4">
@@ -253,7 +253,8 @@
                     <br>参加した新入生のみなさんが「意外とプログラミングってできそう」という気分になり、自分から進んでプログラミングの勉強をしたくなるイベントを目指しました。</p>
                 <p>吉田は、フライヤーを学内に貼って告知、イベントのスライド作成、当日の司会進行を行いました。</p>
                 <p>参加者は、30名ほどいました(参加人数を知るためのアンケートに答えずに帰られた方が多数いるので、正確な数字はわかりません)。
-                    <br>九州工業大学情報工学部の新入生は410名ほどいるので、7%の新入生が参加したことになります。</p>
+                    <br>ちなみに、九州工業大学情報工学部の新入生は410名ほどいます。</p>
+                <p><a href="./event/sinnyuusei">このイベントについて、より詳しくはこちら ></a></p>
             </div>
         </div>
     </div>
